@@ -426,3 +426,4 @@
 - Fixed ircd_log to work in windows
 - Removed __P, windows doesn't like it, and only old compilers need it
 - Fixed a ban realname {} bug that _may_ have something to do with the negative user count bug
+- Fixed do_dns_async problem with new res.c
